# copycat-tgbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  template.sh
.github/workflows/: ci.yml
copycat_tgbot/: app.py  asgi.py  base.py  cache.py  constants.py  error.py  logger.py  run.py  utils.py
copycat_tgbot/bot/: app.py  middleware.py
copycat_tgbot/bot/routers/: __init__.py  base.py  books.py  default.py  help.py
copycat_tgbot/bot/states/: books.py
copycat_tgbot/etc/: config.py
copycat_tgbot/etc/dev/: config.py
copycat_tgbot/etc/prod/: config.py
copycat_tgbot/etc/unittest/: config.py
copycat_tgbot/http_clients/google/: client.py  drive.py  model.py  spreadsheets.py
copycat_tgbot/routes/: help.py  start.py
copycat_tgbot/server/: app.py
tests/: conftest.py  test_bot.py  test_server.py
